# cpp

./: .gitignore  manage.py  requirements.txt
.ebextensions/: django.config
ordercost/: pyproject.toml
ordercost/ordercost/: ordercost.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_order_reference_image.py  0004_remove_order_invoice_file.py  0005_order_reference_image_url.py  0006_remove_order_reference_image.py  0007_remove_supplier_price_per_unit_and_more.py  0008_order_product.py
orders/templates/orders/: confirm_delete.html  edit_reference_image.html  home.html  login.html  navbar.html  order_cost_summary.html  order_list.html  place_order.html  signup.html  supplier_list.html  upload_invoice.html
supplier_order_system/: asgi.py  settings.py  urls.py  wsgi.py
utils/: sns.py  sqs.py
