[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ordercost"
authors = [
    {name = "Riteshclinton", email = "Ritclin12@gmail.com"}
]
description = "This package helps to Calculate total cost of an order based on selected product and quantity"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "boto3"
]